			  - 2002-11-02:  Fixed E_ALL warnings and division by zero error in lib-misc-stats  (Niels)
 			  - 2002-11-02:  Language strings weren't included at the right moment in the install script causing E_ALL warnings  (Niels)
 			  - 2002-11-02:  Added the correct time string in all language files  (Niels)


v 2.0beta7		+ Added configuration manager  (Matteo, 2001-11-04)
			+ Added install and upgrade script  (Matteo and Niels, 2001-11-04)
			+ Added support for different table types, such as InnoDB  (Niels, 2001-11-04)
			+ Added logging for zone statistics  (Niels, 2001-11-18)
			+ Added support for affiliates  (Niels, 2001-11-19)
			+ Added logging of hourly statistics for compact stats  (Niels, 2001-11-21)
			+ Added affiliate statistics  (Niels, 2001-11-25)
			+ Added target based priority  (Niels and Matteo, 2001-11-25)
			+ Added moving of banners, campaigns and zones  (Niels, 2001-12-01)
			+ Added duplication of banners (Niels, thanks to Kelly Cochran, 2001-12-01)
			+ Added ability to apply display limitations to other banners  (Niels, 2001-12-01)
			+ Added new invocation type for popups/popunders  (Niels, 2001-12-02)
			+ Added the ability to use beacon images for logging stats  (Niels, 2001-12-02)
			+ Added the ability to convert hard-coded urls inside Flash banners  (Niels, 2001-12-18)
			+ Added support for MFAA clickTAG's in Flash files  (Niels, 2002-01-09)
			+ Added support for QuickTime, Real and Shockwave files  (Niels, 2002-01-09)
			+ Added source statistics  (Wim, 2002-01-29)
			+ Added monthly statistics  (Niels, 2002-02-03)
			+ Added a log for actions taken during delivery and maintenance, which is also used to log all outgoing email  (Niels, 2002-02-11)
			+ Added support for linking zones to campaigns  (Niels, 2002-02-14)
			+ Added support to block logging for a specific time after a banner is displayed or was clicked on  (Niels, 2002-02-17)
			+ Added linking of zones to campaigns  (Niels, 2002-02-20)