@@ -120,6 +120,7 @@ CVS			+ Added the ability to serve and manage text ads  (Niels, 2002-07-29)
 			  - 2002-11-02:  Fixed E_ALL warnings and division by zero error in lib-misc-stats  (Niels)
  			  - 2002-11-02:  Language strings weren't included at the right moment in the install script causing E_ALL warnings  (Niels)
  			  - 2002-11-02:  Added the correct time string in all language files  (Niels)
+			  - 2002-11-10:  Delivery cache is now updated when limitations are applied to other banners  (Niels)
 
 
 v 2.0beta7		+ Added configuration manager  (Matteo, 2001-11-04)
